--- a/Les 1/index.html
+++ b/Les 1/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<header>
-    <button class="btn-cart" type="button">Корзина</button>
-</header>
-<main>
-    <div class="products"></div>
-</main>
+<div class="container">
+    <nav class="top-menu">
+        <ul class="menu-main">
+            <li><a href="">Главная</a></li>
+            <li><a href="">Товары</a></li>
+            <li><a href="">Контакты</a></li>
+            <li><button class="btn-cart" type="button">Корзина</button></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="products"></div>
+    </main>
+</div>
 <script src="./js/main.js"></script>
 </body>
 </html>
