--- a/Project JS2/index.html
+++ b/Project JS2/index.html
@@ -12,8 +12,11 @@
             <li><a href="">Главная</a></li>
             <li><a href="">Товары</a></li>
             <li><a href="">Контакты</a></li>
-            <li><button class="btn-cart" type="button">Корзина</button></li>
         </ul>
+        <div class="cart">
+            <button class="btn-cart" type="button">Корзина</button>
+            <div class="cart-block invisible"></div>
+        </div>
     </nav>
     <main>
         <div class="products"></div>
