--- a/Project JS2/index.html
+++ b/Project JS2/index.html
@@ -6,22 +6,57 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<div class="container">
-    <nav class="top-menu">
-        <ul class="menu-main">
-            <li><a href="">Главная</a></li>
-            <li><a href="">Товары</a></li>
-            <li><a href="">Контакты</a></li>
-        </ul>
-        <div class="cart">
-            <button class="btn-cart" type="button">Корзина</button>
-            <div class="cart-block invisible"></div>
+<div id="container">
+    <div class="nav">
+        <div class="menu-main">
+            <a href="">Главная</a>
+            <a href="">Товары</a>
+            <a href="">Контакты</a>
         </div>
-    </nav>
+        <form action="#" class="search-form" @submit.prevent="filter">
+            <input type="text" class="search-field" v-model="userSearch">
+            <button class="btn-search" type="submit">
+                <i class="fas fa-search"></i>
+            </button>
+        </form>
+        <button class="btn-cart" type="button"
+                @click="isVisibleCart = !isVisibleCart">Корзина
+        </button>
+        <div class="cart-block" v-show="isVisibleCart">
+                <p v-if="cartItems.length === 0">Нет данных</p>
+                <div class="cart-item" v-for="item of cartItems" :key="item.id_product">
+                    <div class="product-bio">
+                        <img :src="imgCart" alt="Some image">
+                        <div class="product-desc">
+                            <p class="product-title">{{item.product_name}}</p>
+                            <p class="product-quantity">Количество: {{item.quantity}}</p>
+                            <p class="product-single-price">{{item.price}}₽ за единицу</p>
+                        </div>
+                    </div>
+                    <div class="right-block">
+                        <p class="product-price">{{item.quantity*item.price}}₽</p>
+                        <button class="del-btn" @click="remove(item)">&times;</button>
+                    </div>
+                </div>
+            </div>
+    </div>
     <main>
-        <div class="products"></div>
+        <div class="products">
+            <div class="product-item" v-for="product of filtered" :key="product.id_product">
+                <img :src="imgCatalog" alt="Some img">
+                <div class="desc">
+                    <h3>{{product.product_name}}</h3>
+                    <p>{{product.price}}₽</p>
+                    <button class="buy-btn" @click="addProduct(product)">Купить</button>
+                </div>
+            </div>
+        </div>
     </main>
 </div>
+<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"
+        integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
