--- a/Project JS2/public/index.html
+++ b/Project JS2/public/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="container">
+<div id="app">
     <header>
         <div class="nav">
             <div class="menu-main">
@@ -17,7 +16,7 @@
             </div>
             <div class="basket">
                 <filter-el></filter-el>
-                <basket ref="basket"></basket>
+                <cart ref="cart"></cart>
             </div>
         </div>
     </header>
