--- a/Project JS2/public/index.html
+++ b/Project JS2/public/index.html
@@ -3,21 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="app">
     <header>
-        <div class="nav">
-            <div class="menu-main">
-                <a href="">Главная</a>
-                <a href="">Товары</a>
-                <a href="">Контакты</a>
-            </div>
-            <div class="basket">
-                <filter-el></filter-el>
-                <cart ref="cart"></cart>
-            </div>
+        <div class="logo">Интернет-магазин</div>
+        <div class="cart">
+            <filter-el></filter-el>
+            <cart ref="cart"></cart>
         </div>
     </header>
     <main>
@@ -25,13 +20,12 @@
         <error ref="error"></error>
     </main>
 </div>
-    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="js/BasketComp.js"></script>
-    <script src="js/ProductComp.js"></script>
-    <script src="js/FilterComp.js"></script>
-    <script src="js/ErrorComp.js"></script>
-    <script src="js/main.js"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="js/CartComp.js"></script>
+<script src="js/ProducComp.js"></script>
+<script src="js/FilterComp.js"></script>
+<script src="js/ErrorComp.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
-
