--- a/Project JS2/src/public/index.html
+++ b/Project JS2/src/public/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="app">
     <header>
         <div class="logo">Интернет-магазин</div>
         <div class="cart">
-            <filter-el></filter-el>
+            <search></search>
             <cart ref="cart"></cart>
         </div>
     </header>
@@ -22,10 +20,5 @@
 </div>
 <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="js/CartComp.js"></script>
-<script src="js/ProducComp.js"></script>
-<script src="js/FilterComp.js"></script>
-<script src="js/ErrorComp.js"></script>
-<script src="js/main.js"></script>
 </body>
 </html>
